Fixed unresolved tickets card markup and spacing

--- a/src/uikit/custom.scss
+++ b/src/uikit/custom.scss
@@ -214,6 +214,10 @@ nav.sidebar-menu {
                 border: none;
                 min-height: 63px;
 
+                p {
+                    margin-bottom: 0;
+                }
+
                 &:not(:last-child) {
                     border-bottom: 1px solid $gray-100;
                 }
